--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: #171717;
     font-weight: 500;
     color: white;
@@ -6,27 +6,28 @@ body{
 
 /* NAVBAR */
 
-.bg-color{
+.bg-color {
     background-color: transparent;
     color: white;
 }
 
-.nav-link{
-    color: white;
-}
-.nav-link:hover{
-    color: #8443f7;
-}
-
-.nav-link:focus{
-    color: #8443f7;
-}
-
-.navbar-brand{
+.nav-link {
     color: white;
 }
 
-.navbar-nav{
+.nav-link:hover {
+    color: #8443f7;
+}
+
+.nav-link:focus {
+    color: #8443f7;
+}
+
+.navbar-brand {
+    color: white;
+}
+
+.navbar-nav {
     margin-left: auto;
     margin-right: auto;
     gap: 30px;
@@ -34,48 +35,48 @@ body{
 
 }
 
-.cnt-buttons-edit{
+.cnt-buttons-edit {
 
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
     gap: 15px;
     width: 295px;
     margin: 0;
 }
 
-.collapse{
-    
+.collapse {
+
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
-.btn-go-to{
+.btn-go-to {
     color: white;
     width: 270px;
     font-weight: 500;
 }
 
-.btn-go-to:hover{
+.btn-go-to:hover {
     border-color: #8443f7;
-  
+
 }
 
-.btn-join-now{
+.btn-join-now {
     color: white;
     width: 180px;
     background-color: #9b66f721;
     font-weight: 500;
 }
 
-.btn-join-now:hover{
+.btn-join-now:hover {
     background-color: #9a66f7;
 }
 
 
 /* MAIN SECTION */
 
-.section-main{
+.section-main {
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -83,7 +84,7 @@ body{
     flex-wrap: wrap;
 }
 
-.cnt-main{
+.cnt-main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,7 +92,7 @@ body{
     flex-direction: column;
 }
 
-.main-text{
+.main-text {
     color: white;
     font-size: 100px;
     max-width: 800px;
@@ -103,7 +104,7 @@ body{
 /* SECOND SECTION */
 
 
-.stn-two{
+.stn-two {
     background-color: #8443f7;
     display: flex;
     justify-content: center;
@@ -111,7 +112,7 @@ body{
     flex-direction: column;
 }
 
-.card-cnt{
+.card-cnt {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -119,19 +120,19 @@ body{
     gap: 20px;
 }
 
-.card{
+.card {
     background-color: #171717;
     color: white;
 }
 
-.section-text{
-    font-size:50px;
+.section-text {
+    font-size: 50px;
     margin-bottom: 100px;
 }
 
+/* FOOTER */
 
-
-.ctn-footer{
+.ctn-footer {
     height: 40px;
     background-color: #9a66f7;
     display: flex;
@@ -139,7 +140,7 @@ body{
     align-items: center;
 }
 
-.footer-text{
+.footer-text {
     text-align: center;
     margin: 0;
     padding: 0;
